Style fixes for the schedule on mobile

--- a/static/new/css/style.css
+++ b/static/new/css/style.css
@@ -342,24 +342,26 @@ p.question {
   }
 
   .sch-timeslot-kind-talk > h4 {
-    order: -120;
-    flex: 1 1;
+    flex: 1 0;
+    flex-basis: 100%;
   }
 
   .sch-duration, .sch-room {
-    flex: 0 1;
-    margin: 0;
     line-height: 1;
   }
 
+  .sch-room {
+    flex: 0 1;
+  }
+
   .sch-speaker-photo {
-    left: 10px;
-    top: 15px;
+    right: 10px;
+    top: 33px;
   }
 
   .sch-speaker-photo + h4,
   .sch-speaker-photo + h4 + .sch-speaker {
-    padding: 0 0 0 46px;
+    padding: 0 46px 0 0;
   }
 
   .sch-timeslot-kind-keynote,
